examples/failing/varargs.cz
let example = fn(...args) {
    print(string(args));
};

let with_other_args = fn(foo, bar, ...rest) {
    print("foo", foo);
    print("bar", bar);
    print("rest", rest.join(", "));
};
